UI components initially ready UI components are ready but still have some bugs.

--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-  	<link id="external-css" rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" media="all">
-</head>
+    <link
+      id="external-css"
+      rel="stylesheet"
+      type="text/css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      media="all"
+    />
+  </head>
 
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="container"></div>
-    <!--
+    <div id="container" class="container-fluid h-100"></div>
+    <!-- 
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
